--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -571,7 +571,7 @@ de la API de \texttt{LinkedList}},label={lst:driverAPI},captionpos=b]
 private static LinkedList generateStructure(int scope) {
     int maxLength = Verify.getInt(0, scope);
     LinkedList list = new LinkedList();
-    for (int i = 0; i <= maxLength; i++) {
+    for (int i = 0; i < maxLength; i++) {
         switch (Verify.getInt(n_methods - 1)) {
             case 0:
                 int value = Verify.getInt(0, scope);
